Fixed HomePage titles spacing

--- a/src/pages/HomePage/Components/NoPluginsInstalledHeader/NoPluginsInstalledHeader.module.scss
+++ b/src/pages/HomePage/Components/NoPluginsInstalledHeader/NoPluginsInstalledHeader.module.scss
@@ -6,6 +6,7 @@
     @include flex(center, space-between);
 
     .messageWrapper {
+        line-height: 28px;
         text-align: end;
 
         .specialText {
